--- a/aldryn_categories/locale/de/LC_MESSAGES/django.po
+++ b/aldryn_categories/locale/de/LC_MESSAGES/django.po
@@ -8,15 +8,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-06-20 14:58+0200\n"
+"POT-Creation-Date: 2017-03-01 11:38-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Angelo Dini <finalangeljp@hotmail.com>, 2016\n"
+"Last-Translator: Paulo Alvarado <paulo.alvarado@divio.ch>, 2017\n"
 "Language-Team: German (https://www.transifex.com/divio/teams/58664/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+#: admin.py:19
+msgid "Position"
+msgstr "Position"
+
+#: admin.py:20
+msgid "Relative to"
+msgstr "Relativ zu"
 
 #: cms_wizards.py:36
 msgid "New category"
@@ -32,7 +40,7 @@ msgstr "Name"
 
 #: models.py:65
 msgid "slug"
-msgstr ""
+msgstr "Slug"
 
 #: models.py:68
 msgid "Provide a “slug” or leave blank for an automatically generated one."
